updated OG iamge

--- a/index.html
+++ b/index.html
@@ -7,7 +7,15 @@
 
     <title>PromptKit - Future Of Web Hackathon - Convex Chef</title>
 
-    <meta property="og:image" content="/og-preview.jpg" />
+    <meta property="og:image" content="https://promptkit.netlify.app/promptkit.png" />
+
+    <!-- Twitter Card Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="PromptKit - Future Of Web Hackathon - Convex Chef" />
+    <meta
+      name="twitter:description"
+      content="Enhance your prompts with AI. Export to Markdown, JSON, or XML, and send directly to Convex Chef." />
+    <meta name="twitter:image" content="https://promptkit.netlify.app/promptkit.png" />
   </head>
   <body>
     <div id="root"></div>
