--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/src/index.css" />
 
-    <title>PromptKit - Future Of Web Hackathon - Convex Chef</title>
+    <title>PromptKit - Markdown, JSON, XML—done -for Future Of Web Hackathon - Convex Chef</title>
 
     <meta property="og:image" content="https://promptkit.netlify.app/promptkit.png" />
 
