--- a/index.html
+++ b/index.html
@@ -5,16 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/src/index.css" />
 
-    <title>RePrompt - Markdown, JSON, XML—done - Convex Chef</title>
+    <title>RePrompt - Create Prompts in Markdown, JSON, XML</title>
 
     <meta property="og:image" content="https://promptkit.netlify.app/promptkit.png" />
 
     <!-- Twitter Card Meta Tags -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="PromptKit - Future Of Web Hackathon - Convex Chef" />
+    <meta name="twitter:title" content="RePrompt - Create Prompts in Markdown, JSON, XML" />
     <meta
       name="twitter:description"
-      content="Enhance your prompts with AI. Export via Markdown, JSON, XML for vibe coding. send directly to Convex Chef." />
+      content="Enhance your prompts for Vibe Coding. Export to Markdown, JSON, or XML. send directly to Convex Chef." />
     <meta name="twitter:image" content="https://promptkit.netlify.app/promptkit.png" />
 
     <link rel="apple-touch-icon-precomposed" sizes="57x57" href="apple-touch-icon-57x57.png" />
@@ -41,6 +41,5 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
-    
   </body>
 </html>
